syntax = "proto3";
option java_package = "me.hanslovsky.n5.grpc.generated";

service N5GRPCService {
  rpc ReadBlock(BlockMeta) returns (Block);
  rpc Exists(Path) returns (BooleanFlag);
  rpc DatasetExists(Path) returns (BooleanFlag);
  rpc List(Path) returns (Paths);
  rpc GetAttributes(Path) returns (JsonString);
  rpc GetDatasetAttributes(Path) returns (DatasetAttributes);
}

message Path {
  string pathName = 1;
}

message Paths {
  repeated Path paths = 1;
}

message JsonString {
  string jsonString = 1;
}

message BooleanFlag {
  bool flag = 1;
}

message BlockMeta {
  Path path = 1;
  repeated uint64 gridPosition = 2 [packed=true];
  DatasetAttributes datasetAttributes = 3;
}

message Block {
  bytes data = 1;
  // TODO should Block hold its position and size? Could be used for confirmation purposes
}

message DatasetAttributes {
  repeated uint64 dimensions = 1 [packed=true];
  repeated uint32 blockSize = 2 [packed=true];
  string dataType = 3;
  string compressionJsonString = 4;
}